--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "@iarna/toml": "^2.2.5",
     "commander": "^8.3.0",
     "convict": "^6.2.1",
-    "flat": "^5.0.2"
+    "flat": "^5.0.2",
+    "jsqr": "^1.4.0",
+    "otpauth": "^7.0.8",
+    "pngjs": "^6.0.0",
+    "puppeteer": "^13.0.1",
+    "table": "^6.7.5",
+    "undici": "^4.12.1"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
