--- a/package.json
+++ b/package.json
@@ -25,19 +25,31 @@
     "convict": "^6.2.1",
     "flat": "^5.0.2",
     "jsqr": "^1.4.0",
-    "otpauth": "^7.0.8",
+    "otpauth": "^7.0.9",
     "pngjs": "^6.0.0",
-    "puppeteer": "^13.0.1",
-    "table": "^6.7.5",
-    "undici": "^4.12.1"
+    "prompts": "^2.4.2",
+    "table": "^6.8.0",
+    "ua-parser-js": "^1.0.2",
+    "undici": "^4.12.1",
+    "user-agents": "^1.0.894"
   },
   "devDependencies": {
-    "eslint": "^8.5.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-json-files": "^1.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.1"
+  },
+  "peerDependencies": {
+    "puppeteer": "^13.0.1"
+  },
+  "peerDependenciesMeta": {
+    "puppeteer": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=16.0.0"
