--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "ok-zoomer",
-  "version": "0.2.0-dev.0",
+  "version": "0.2.0-beta.0",
   "description": "Automation toolkit for teaching at scale",
-  "homepage": "https://github.com/61c-teach/ok-zoomer#readme",
+  "homepage": "https://github.com/chrononyan/ok-zoomer#readme",
   "bugs": {
-    "url": "https://github.com/61c-teach/ok-zoomer/issues"
+    "url": "https://github.com/chrononyan/ok-zoomer/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/61c-teach/ok-zoomer.git"
+    "url": "git+https://github.com/chrononyan/ok-zoomer.git"
   },
   "license": "MIT",
   "author": "Jerry Xu <jerryxu@berkeley.edu>",
   "type": "module",
-  "bin": "./src/cli.js",
+  "main": "./src/cli/ok-zoomer.js",
+  "bin": {
+    "ok-zoomer": "./src/cli/ok-zoomer.js",
+    "ok-zoomer-generate-meetings": "./src/cli/ok-zoomer-generate-meetings.js"
+  },
   "scripts": {
     "lint": "eslint src",
     "lint:fix": "eslint --fix src"
   },
   "dependencies": {
-    "commander": "^8.3.0",
+    "commander": "^9.4.0",
     "csv-parse": "^5.3.0",
     "csv-stringify": "^6.2.0",
-    "puppeteer": "^17.1.3",
-    "user-agents": "^1.0.894"
+    "puppeteer": "^18.0.5",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
